New log event layouts, its adapter and recycleview.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,9 @@
     <string name="exerString">Exercise</string>
     <string name="medsString">Medication</string>
     <string name="logEventString">Log Event</string>
-    <string name="enterDietString">Enter Diet</string>
-    <string name="enterExerString">Enter Exercise</string>
-    <string name="enterMedsString">Enter Medications</string>
+    <string name="addDietString">Add\nDiet</string>
+    <string name="addExerString">Add\nExercise</string>
+    <string name="addMedsString">Add\nMedications</string>
     <string name="normalRangeString">Normal.\nThis is an\nIdeal Range</string>
     <string name="possiblyLowString">Possibly low.\nGet sugar if\nyou feel weak.</string>
     <string name="tooLowString">Too low!\nGet sugar\nimmediately</string>
@@ -28,4 +28,56 @@
     <string name="frequencyString">Frequency</string>
     <string name="zero">0</string>
     <string name="setNewBglString">Set BGL</string>
+
+    <string name="pickDate">Date</string>
+    <string name="pickTime">Time</string>
+    <string name="textViewQty">Quantity</string>
+    <string name="textViewDuration">Duration</string>
+    <string name="textViewTime">Date and Time</string>
+
+    <string name="textViewDiet">Diet</string>
+    <string name="textEditDiet">Diet</string>
+    <string name="editTextDietDescription">What did you eat?</string>
+    <string name="enterDietDescription">Enter diet description.</string>
+    <string name="editTextDietQty">How much did you eat?</string>
+    <string name="enterDietQty">Enter diet quantity.</string>
+    <string name="editTextDietTime">What time did you eat?</string>
+    <string name="enterDietTime">Enter the time of diet.</string>
+
+    <string name="textViewExercise">Exercise</string>
+    <string name="textEditExercise">Exercise</string>
+    <string name="editTextExerciseDescription">What kind of exercise?</string>
+    <string name="enterExerciseDescription">Enter exercise description.</string>
+    <string name="editTextExerciseDuration">How long did you exercise?</string>
+    <string name="enterExerciseDuration">Enter exercise duration.</string>
+    <string name="editTextExerciseTime">What time did you exercise?</string>
+    <string name="enterExerciseTime">Enter the time of exercise.</string>
+
+    <string name="textViewMedication">Medication</string>
+    <string name="textEditMedication">Medication</string>
+    <string name="editTextMedicationDescription">What did you eat?</string>
+    <string name="enterMedicationDescription">Enter medication description.</string>
+    <string name="editTextMedicationQty">How much did you eat?</string>
+    <string name="enterMedicationQty">Enter medication quantity.</string>
+    <string name="editTextMedicationTime">What time did you eat?</string>
+    <string name="enterMedicationTime">Enter the time of medication.</string>
+
+    <!-- SHADE LIST COLOR -->
+    <string name="gold">GOLD</string>
+    <string name="blue">BLUE</string>
+    <string name="plum">PLUM</string>
+
+    <!-- SHADE DETAIL INFORMATION -->
+    <string name="plum_is">Plum is a deep purple color. It is used in weddings. </string>
+    <string name="blue_is">Blue is the color of peace and trust.</string>
+    <string name="gold_is">Gold is associated with sunshine and knowledge.</string>
+    <string name="enterDietString">Enter Diet</string>
+    <string name="enterExerString">Enter Exercise</string>
+    <string name="enterMedsString">Enter Medication</string>
+    <string name="textViewValueTitle">ValueTitle</string>
+    <string name="textEditLogEventTitle">LogEventTitle</string>
+    <string name="enterLogEventDescription">LogEventDescription</string>
+    <string name="textViewLogEventDescriptionTitle">LogEventDescriptionTitle</string>
+    <string name="enterLogEventValue">LogEventValue</string>
+
 </resources>
