--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,7 +84,9 @@
     <string name="setEntriesValue">Set Entries</string>
     <string name="addEntryValue">Add Entry</string>
     <string name="mainPageValue">Main Page</string>
-
+    <string name="start_date">Enter Start Date</string>
+    <string name="end_date">Enter End Date</string>
+    <string name="search">Search</string>
 
 
 </resources>
