Fixed bgl button visibilty issue on smaller screens. Modified the prescription view to include a day picker instead of a date picker.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,5 +93,15 @@
     <string name="daily">Daily</string>
     <string name="weekly">Weekly</string>
 
+    <string name="textEditBloodGL">BGL</string>
 
+    <string-array name="weak_days">
+        <item>Monday</item>
+        <item>Tuesday</item>
+        <item>Wednesday</item>
+        <item>Thursday</item>
+        <item>Friday</item>
+        <item>Saturday</item>
+        <item>Sunday</item>
+    </string-array>
 </resources>
